--- a/myNewPizza-war/web/index.xhtml
+++ b/myNewPizza-war/web/index.xhtml
@@ -1,14 +1,178 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     <h:head>
         <title>Facelet Title</title>
+        <f:loadBundle var='msg' basename='messages'/>
+        <f:loadBundle var='war' basename='warnung'/>
+
+        <f:metadata>
+            <f:viewAction action="#{foodController.reset(foodController.foodlist)}" />
+            <f:viewAction action="#{orderController.reset()}" />
+        </f:metadata>
     </h:head>
     <h:body>
-        Hello from Facelets
-        <br />
-        <h:link outcome="welcomePrimefaces" value="Primefaces welcome page" />
+
+        <p:layout fullPage="true" >
+            <p:layoutUnit position="north"   collapsible="false">
+             <h:outputText value="#{msg.servus}" style="font-size:25px" rendered="#{not userController.logedIn}"/>
+                    <h:outputText value="#{msg.mes}"  rendered="#{not userController.logedIn}"/>
+                    <h:outputText value="#{msg.servus}, #{userController.myUser.UUsername}" style="font-size:30px" rendered="#{userController.logedIn}"/>
+                    <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
+            </p:layoutUnit>
+            
+            <!-- *************************************************WEST*********************************************-->
+
+            <p:layoutUnit position="west"   collapsible="false">
+                <h:form style="font-size:14px;">
+
+
+                    <h:commandButton action='#{localeController.switchLang("de")}' value="#{msg.lde}" style="background-color:red;color:white;font-size:14px; width:100%;" /><br/>
+                    <h:commandButton action='#{localeController.switchLang("en")}' value="#{msg.len}" style="background-color:red;color:white;font-size:14px; width:100%;" /><br/>
+                    <ui:fragment rendered="#{request.isUserInRole('Admin')}"><br /></ui:fragment>
+                    <h:commandButton  action="#{navigationController.tad()}" value="#{msg.adm}" style="background-color:red;color:white;font-size:14px; width:100%;" rendered='#{request.isUserInRole("Admin")}'/><br/>
+                    <h:commandButton  action="#{navigationController.tmc()}" value="#{msg.mac}" style="background-color:red;color:white;font-size:14px; width:100%;" rendered='#{userController.logedIn}'/><br/>
+                    <h:commandButton action="#{userController.logOut()}" value="#{msg.loo}" style="background-color:red;color:white;font-size:14px; width:100%;" rendered="#{userController.logedIn}"/>
+                </h:form>  
+            </p:layoutUnit>
+
+            <!-- *************************************************Mitte*********************************************-->
+
+
+
+
+            <p:layoutUnit position="center"   collapsible="false">
+
+                <p:accordionPanel rendered="#{not userController.logedIn}" >
+                    <!-- ***************************************EINLOGGEN***************************************-->
+                    <p:tab title="#{msg.lin}" titleStyle="background-color:red" >
+
+                        <h:form style="font-size:14px;">
+
+
+                            <h:panelGrid columns="3" style="font-size:14px;">
+                                <h:outputLabel for="inUsername" value="#{msg.ben}" />
+                                <h:inputText id="inUsername" value="#{userController.myUser.UUsername}" style="background-color:lavender" required="true" requiredMessage='#{messagesView.bnnl()}'/>
+                                <p:message for="inUsername"/>
+                                <h:outputLabel for="inPassword" value="#{msg.pw}" />
+
+                                <h:inputSecret id="inPassword" value="#{userController.myUser.UPassword}" style="background-color:lavender" required="true" requiredMessage='#{messagesView.pwnl()}'/>
+                                <p:message for="inPassword"/>
+
+                                <h:commandButton action="#{userController.login()}" value="#{msg.lin}" style="background-color:red;color:white;font-size:14px;"/>
+                            </h:panelGrid>
+
+
+                        </h:form>
+
+
+
+
+                    </p:tab>
+                    <!-- ***************************************REGISTRIEREN***************************************-->
+                    <p:tab title="#{msg.reg}" titleStyle="background-color:red">
+                        <h:form style="font-size:14px;">
+
+                            <h:panelGrid columns="6" style="font-size:14px;">
+
+
+                                <h:outputLabel for="inUsername" value="#{msg.ben}" />
+                                <h:inputText id="inUsername" value="#{userController.myUser.UUsername}" required="true" requiredMessage='#{messagesView.reg_e()} #{messagesView.bnnl()}'/>
+                                <h:outputLabel for="inPassword" value="#{msg.pw}" />
+                                <h:inputSecret id="inPassword" value="#{userController.myUser.UPassword}" required="true"   requiredMessage='#{messagesView.pwnl()}'/>
+
+
+                                <h:outputLabel for="inTitle" value="#{msg.sex}" />
+                                <h:selectOneMenu id="inTitle" value="#{userController.myUser.UTitle}">
+                                    <f:selectItem itemValue="#{msg.hrn}" itemLabel="#{msg.man}" />
+                                    <f:selectItem itemValue="#{msg.fra}" itemLabel="#{msg.fem}" />	   							
+                                </h:selectOneMenu>	
+
+                                <h:outputLabel for="inFirstname" value="#{msg.vn}" />
+                                <h:inputText id="inFirstname" value="#{userController.myUser.UFirstname}" required="true" requiredMessage='#{messagesView.fnnl()}' />
+                                <h:outputLabel for="inLastname" value="#{msg.nn}" />
+                                <h:inputText  id="inLastname" value="#{userController.myUser.ULastname}" required="true" requiredMessage='#{messagesView.lnnl()}'/>
+                                <h:outputLabel for="inStreet" value="#{msg.str}" />
+                                <h:inputText id="inStreet" value="#{userController.myUser.UStreet}" required="true" requiredMessage='#{messagesView.stnl()}'/>
+                                <h:outputLabel for="inHouse" value="#{msg.hn}" />
+                                <h:inputText  id="inHouse" value="#{userController.myUser.UHouse}" required="true" requiredMessage='#{messagesView.hnnl()}' />
+                                <h:outputLabel for="inPlz" value="#{msg.plz}" />
+                                <h:inputText id="inPlz" value="#{userController.myUser.UPlz}" required="true" requiredMessage='#{messagesView.plznl()}' />
+                                <h:outputLabel for="inPlace" value="#{msg.ort}" />
+                                <h:inputText  id="inPlace" value="#{userController.myUser.UPlace}" required="true" requiredMessage='#{messagesView.ornl()}'/>
+
+
+                                <h:commandButton action="#{userController.reset()}" value="#{msg.res}" style="background-color:red;color:white;"/>
+                                <h:commandButton action="#{userController.register()}" value="#{msg.reg}" style="background-color:red;color:white;"/>
+                            </h:panelGrid>
+                        </h:form>
+                    </p:tab>
+
+                </p:accordionPanel>
+
+                <!-- ***************************************BESTELLUNG***************************************-->
+
+                <h:form>
+
+                    <h:dataTable id="food" value="#{foodController.foodlist}" var="food" style="font-size:14px;">
+                        <f:facet name="header">#{msg.usk}</f:facet>
+                        <h:column>
+                            <f:facet name ="header">#{msg.num}</f:facet>
+
+
+                            <h:outputText value="#{food.FId}" />
+
+                        </h:column>
+                        <h:column>
+                            <f:facet name="header">#{msg.nam}</f:facet>
+
+                            <h:outputText value="#{food.FName}"/>
+
+                        </h:column>
+
+                        <h:column>
+                            <f:facet name="header">#{msg.prs}</f:facet>
+
+                            <h:outputText value="#{food.FPrice}">
+                                <f:convertNumber type="currency" currencySymbol="€" locale="pt-PT" />
+                            </h:outputText>
+
+                        </h:column>
+
+
+                        <h:column rendered="#{userController.logedIn}">
+                            <f:facet name="header" >#{msg.men} </f:facet>
+
+                            <h:inputText value="#{food.FAmmount}"/>
+
+                        </h:column>
+
+                    </h:dataTable>
+
+                    <h:commandButton action="#{orderController.addToOrder(foodController.foodlist)}" value="#{msg.plus}" rendered="#{userController.logedIn}" style="background-color:red;color:white;"/>
+
+
+
+                    <h:commandButton action="#{foodController.reset(foodController.foodlist)}" value="#{msg.res}" rendered="#{userController.logedIn}" style="background-color:red;color:white;">
+                        <f:actionListener binding="#{orderController.reset()}" />
+                    </h:commandButton>
+
+                </h:form>
+
+
+            </p:layoutUnit>
+
+
+
+
+
+        </p:layout>
+
     </h:body>
 </html>
 
