--- a/myNewPizza-war/web/danke.xhtml
+++ b/myNewPizza-war/web/danke.xhtml
@@ -24,7 +24,7 @@
                 
                   <h:outputText value="#{msg.dfbs}" />
                   <h:form>
-                  <h:commandButton action="#{navigationController.tr()}" value="#{msg.zrre}"/>
+                  <h:commandButton action="#{navigationController.tr()}" value="#{msg.zrre}" style="background-color:red;color:white;font-size:14px;"/>
                   </h:form>
                 </p:layoutUnit>
         
